Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17601

MariaDB Galera does not expect 'mbstream' as streamfmt in the [sst] section and defaults to non-default 'tar'

    XMLWordPrintable

Details

    Description

      Using:

      [sst]
      streamfmt=mbstream

      causes SST to fail because the format defaults for some reason to 'tar'

      A quick investigation led to find that while wsrep_sst_mariabackup uses 'mbstream' as binary for streaming, it only handles the parameter value 'xbstream'.

          if [[ $sfmt == 'xbstream' ]];then
              wsrep_log_info "Streaming with xbstream"
              if [[ "$WSREP_SST_OPT_ROLE"  == "joiner" ]];then
                  strmcmd="${XBSTREAM_BIN} -x"
      ....
      

      XBSTREAM_BIN=mbstream
      
      

      Maybe it would be useful to have wsrep_sst_mariabackup accept both xbstream and mbstream and map them both to 'mbstream' so to assure a smooth migration for who migrates from xtrabackup sst method to mariabackup.

      Or, imho, if it should only accept one value, that would be 'mbstream' in MariaDB Galera using mariabackup as sst method.

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              claudio.nanni Claudio Nanni
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 0.25h
                  1d 0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.